src/test/deca/context/invalid/declaVariable-wrongTypeExpression.context
declaVariable-wrongTypeExpression.deca:12:
